--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,2 @@
-[package]
-name = "franz"
-version = "0.1.0"
-authors = ["Kosta Welke <kw@trinatives.com>"]
-edition = "2018"
-
-[dependencies]
-tokio = "0.1"
-futures = "0.1"
-bytes = "0.4.11"
-byteorder = "1.2.7"
+[workspace]
+members = ["franz*"]
