--- a/franz-proto/Cargo.toml
+++ b/franz-proto/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2018"
 
 [dependencies]
 franz-base = { path = "../franz-base" }
+franz-macros = { path = "../franz-macros" }
 tokio = "0.1"
 futures = "0.1"
 bytes = "0.4.11"
