--- a/franz-macros/Cargo.toml
+++ b/franz-macros/Cargo.toml
@@ -11,6 +11,7 @@ proc-macro = true
 syn = "0.15"
 quote = "0.6.3"
 proc-macro2 = "0.4.25"
+itertools = "0.8.0"
 
 [dev-dependencies]
 franz-base = { path = "../franz-base" }
