--- a/franzi-base/Cargo.toml
+++ b/franzi-base/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "franz-base"
+name = "franzi-base"
 version = "0.1.0"
 authors = ["Kosta Welke <kw@trinatives.com>"]
 edition = "2018"
