--- a/franzi-macros/Cargo.toml
+++ b/franzi-macros/Cargo.toml
@@ -12,6 +12,7 @@ syn = "0.15"
 quote = "0.6.3"
 proc-macro2 = "0.4.25"
 lazy_static = "1.2.0"
+soup = "0.3.0"
 
 [dev-dependencies]
 franzi-base = { path = "../franzi-base" }
