--- a/franzi-proto/Cargo.toml
+++ b/franzi-proto/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 [dependencies]
 franzi-base = { path = "../franzi-base" }
 franzi-macros = { path = "../franzi-macros" }
-tokio = "0.1"
-futures = "0.1"
+tokio = "0.2.0-alpha.6"
+futures-preview = "0.3.0-alpha.19"
 bytes = "0.4.11"
 byteorder = "1.2.7"
