--- a/franzi-client/Cargo.toml
+++ b/franzi-client/Cargo.toml
@@ -10,6 +10,7 @@ franzi-proto = { path = "../franzi-proto" }
 bytes = "0.4.11"
 tokio = "0.2.0-alpha.6"
 tokio-io = "0.2.0-alpha.6"
+tokio-net = "0.2.0-alpha.6"
 futures-preview = "0.3.0-alpha.19"
 byteorder = "1.2.7"
 rand = "0.6.5"
