--- a/franzi-client/Cargo.toml
+++ b/franzi-client/Cargo.toml
@@ -16,3 +16,5 @@ byteorder = "1.2.7"
 rand = "0.6.5"
 chashmap = "2.2.2"
 debug_stub_derive = "0.3"
+tracing = "0.1.9"
+tracing-subscriber = "0.1.5"
