--- a/franzi-client/Cargo.toml
+++ b/franzi-client/Cargo.toml
@@ -19,3 +19,4 @@ debug_stub_derive = "0.3"
 tracing = "0.1.9"
 tracing-subscriber = "0.1.5"
 tracing-futures = { version="0.1", default-features = false, features=["futures-preview", "tokio-alpha"] }
+bstr = "0.2"
