--- a/franzi-proto/Cargo.toml
+++ b/franzi-proto/Cargo.toml
@@ -12,6 +12,9 @@ futures-preview = "0.3.0-alpha.19"
 bytes = "0.4.11"
 byteorder = "1.2.7"
 lazy_static = "1.4.0"
+
+# For Compression
 flate2 = "1.0.12"
 snap = "0.2.5"
 lz4 = "1.23.1"
+zstd = "0.5.0"
