--- a/franzi-base/Cargo.toml
+++ b/franzi-base/Cargo.toml
@@ -7,3 +7,7 @@ edition = "2018"
 [dependencies]
 bytes = "0.4.11"
 futures-preview = "0.3.0-alpha.19"
+snap = "0.2.5"
+
+[dev-dependencies]
+quickcheck = "0.9"
