--- a/franzi-base/Cargo.toml
+++ b/franzi-base/Cargo.toml
@@ -5,8 +5,8 @@ authors = ["Kosta Welke <kw@trinatives.com>"]
 edition = "2018"
 
 [dependencies]
-bytes = "0.4.11"
-futures-preview = "0.3.0-alpha.19"
+bytes = "0.5"
+futures = "0.3"
 snap = "0.2.5"
 
 [dev-dependencies]
