--- a/franzi-client/Cargo.toml
+++ b/franzi-client/Cargo.toml
@@ -7,16 +7,14 @@ edition = "2018"
 [dependencies]
 franzi-base = { path = "../franzi-base" }
 franzi-proto = { path = "../franzi-proto" }
-bytes = "0.4.11"
-tokio = "0.2.0-alpha.6"
-tokio-io = "0.2.0-alpha.6"
-tokio-net = "0.2.0-alpha.6"
-futures-preview = "0.3.0-alpha.19"
-byteorder = "1.2.7"
+bytes = "0.5"
+tokio = { version="0.2", features=["tcp", "io-util", "time", "rt-core", "dns", "macros"] }
+tokio-util = { version="0.2", features=["codec"]}
+futures = "0.3"
 rand = "0.6.5"
 chashmap = "2.2.2"
 debug_stub_derive = "0.3"
-tracing = "0.1.9"
-tracing-subscriber = "0.1.5"
-tracing-futures = { version="0.1", default-features = false, features=["futures-preview", "tokio-alpha"] }
+tracing = "0.1.12"
+tracing-subscriber = "0.2"
+tracing-futures = { version="0.2", default-features = false, features=["futures-03"] }
 bstr = "0.2"
