--- a/franzi-client/Cargo.toml
+++ b/franzi-client/Cargo.toml
@@ -18,3 +18,4 @@ tracing = "0.1.12"
 tracing-subscriber = "0.2"
 tracing-futures = { version="0.2", default-features = false, features=["futures-03"] }
 bstr = "0.2"
+structopt = "0.3.17"
